@@ -2,6 +2,8 @@
 v6.2.1-git
 ----------
 
+[mms] Fix displaying Sent mailbox label when multiple sent-mail mailboxes are
+      defined.
 [mms] Fix advanced search in all mailboxes if virtual folders or remote
       accounts exist (Bug #13384).
 [mms] Fix regression in automatically expanding deeply nested mailboxes in the
